<resources>

    <string name="app_name">Laser Cut FABLAB</string>

    <!-- ServiceActivity-->
    <string name="ProjectUse">Project Use:</string>
    <string name="ServiceType">Service Type:</string>
    <string name="Academic">Academic</string>
    <string name="Personal">Personal</string>
    <string name="Autoservice">Autoservice</string>
    <string name="PROService">PRO Service</string>
    <string name="Material">Material:</string>
    <string name="Thickness">Thickness:</string>
    <string name="Time">Time:</string>
    <string name="Date">Date:</string>
    <string name="ChooseMaterial">Choose a Material</string>
    <string name="ChooseTime">Choose time to reserve</string>
    <string name="ChooseTurn">Choose your turn</string>

    <string name="BTNChooseReservationHour">Choose Reservation Hour</string>
    <string name="BTNNext">Next</string>

    <!-- AlertDialog messages -->

    <string name="OK">OK</string>
    <string name="missing_statements_message">Some required fields are missing.</string>
    <string name="PRO_service_info_message">A FABLAB employee will do the task.</string>
    <string name="missing_turns_message">Missing turns to select.</string>
    <string name="reserved_turns_message">Reserved turns can\'t be selected.</string>
    <string name="successful_reservation_message">Your reservation has been completed.</string>
    <string name="error_upload_message">Unable to upload the reservation to database.</string>
    <string name="error_reading_database_message">Unable to read the database.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="invalid_email_message">Enter a valid email.</string>

    <!-- DetailsActivity -->

    <string name="Name">Name*</string>
    <string name="LastName">Last Name*</string>
    <string name="Email">Email*</string>
    <string name="Phone">Phone*</string>
    <string name="Notes">Notes</string>


    <string name="BTNConfirm">Confirm</string>
    <string name="RequiredFields">* Required Fields</string>

    <string name="ReservationDate">Reservation Date:</string>
    <string name="ReservationHour">Reservation Hour:</string>
    <string name="ClientName">Name:</string>
    <string name="ClientLastName">Last Name:</string>
    <string name="ServiceTypeSummary">Service Type:</string>
    <string name="ProjectUseSummary">Project Use:</string>
    <string name="TotalCost">TOTAL COST:</string>
    <string name="BTNConfirmReservation">Confirm Reservation</string>
    <string name="TotalCostAcademic">FREE</string>

    <!-- Arrays -->

    <array name="materials">
        <item>DM</item>
        <item>Cardboard</item>
        <item>Posterboard</item>
        <item>Plywood</item>
        <item>Methacrylate</item>
        <item>Other</item>
    </array>

    <array name="time">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>75 min</item>
        <item>90 min</item>
        <item>105 min</item>
        <item>120 min</item>
    </array>

</resources>
