<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <TextView
        android:id="@+id/ClientLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/ProjectUse"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ProjectUseView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ProjectUseView"
        tools:text="Ús del projecte" />

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toTopOf="@+id/ProjectUseView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@android:color/black" />

    <RadioGroup
        android:id="@+id/ProjectUseView"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ServiceTypeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ServiceTypeView"
        app:layout_constraintTop_toBottomOf="@+id/LogoView">

        <RadioButton
            android:id="@+id/btn_academic"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Academic"
            android:textSize="14sp"
            tools:text="Acadèmic" />

        <RadioButton
            android:id="@+id/btn_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Personal"
            tools:text="Personal" />

    </RadioGroup>

    <TextView
        android:id="@+id/ServiceTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/ServiceType"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ServiceTypeView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ServiceTypeView"
        tools:text="Tipus de servei" />

    <RadioGroup
        android:id="@+id/ServiceTypeView"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ChosenMaterial"
        app:layout_constraintStart_toEndOf="@+id/ServiceTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/ProjectUseView">

        <RadioButton
            android:id="@+id/btn_autoservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Autoservice"
            tools:text="Autoservei" />

        <RadioButton
            android:id="@+id/btn_PROservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PROService"
            tools:text="Servei PRO" />

    </RadioGroup>

    <TextView
        android:id="@+id/MaterialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/Material"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ChosenMaterial"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Material" />

    <TextView
        android:id="@+id/ChosenMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/back"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/EditThickness"
        app:layout_constraintStart_toEndOf="@+id/MaterialLabel"
        app:layout_constraintTop_toBottomOf="@+id/ServiceTypeView"
        tools:text="DM" />

    <ImageButton
        android:id="@+id/ChooseMaterialButton"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/background_light"
        android:onClick="onClickChooseMaterial"
        android:scaleType="fitCenter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ChosenMaterial"
        app:layout_constraintStart_toEndOf="@+id/ChosenMaterial"
        app:layout_constraintTop_toTopOf="@+id/ChosenMaterial"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <TextView
        android:id="@+id/ThicknessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/Thickness"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EditThickness"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Gruix" />

    <TextView
        android:id="@+id/TimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/Time"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ChosenTime"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Temps" />

    <TextView
        android:id="@+id/ChosenTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/CalendarButton"
        app:layout_constraintStart_toStartOf="@+id/ChosenMaterial"
        app:layout_constraintTop_toBottomOf="@+id/EditThickness"
        tools:text="15 min" />

    <ImageButton
        android:id="@+id/ChooseTimeButton"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@android:color/background_light"
        android:onClick="onClickChooseTime"
        android:scaleType="fitCenter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ChosenTime"
        app:layout_constraintStart_toEndOf="@+id/ChosenTime"
        app:layout_constraintTop_toTopOf="@+id/ChosenTime"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <TextView
        android:id="@+id/ChooseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/Date"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/CalendarButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CalendarButton"
        tools:text="Data" />

    <ImageButton
        android:id="@+id/CalendarButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:onClick="onClickChooseDate"
        app:layout_constraintBottom_toTopOf="@+id/ChooseHourButton"
        app:layout_constraintStart_toStartOf="@+id/EditThickness"
        app:layout_constraintTop_toBottomOf="@+id/ChosenTime"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <Button
        android:id="@+id/ChooseHourButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickChooseHour"
        android:text="@string/ChooseReservationHour"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalendarButton"
        tools:text="Escull hora de reserva" />

    <TextView
        android:id="@+id/ChosenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dd/mm/yyyy"
        app:layout_constraintBaseline_toBaselineOf="@+id/ChooseDateLabel"
        app:layout_constraintStart_toStartOf="@+id/mmLabel"
        tools:text="dd/mm/yyyy" />

    <EditText
        android:id="@+id/EditThickness"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/ChosenTime"
        app:layout_constraintStart_toStartOf="@+id/ChosenMaterial"
        app:layout_constraintTop_toBottomOf="@+id/ChosenMaterial"
        tools:text="3" />

    <TextView
        android:id="@+id/mmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="mm"
        app:layout_constraintBaseline_toBaselineOf="@+id/ThicknessLabel"
        app:layout_constraintStart_toEndOf="@+id/EditThickness" />

    <ImageView
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/ServiceTypeView"
        app:layout_constraintStart_toEndOf="@+id/ServiceTypeView"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:scaleX="0.8" />

</android.support.constraint.ConstraintLayout>